syn/main/OPT/csim/report/jpeg2bmp_main_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling(apcc) ../../../../../tb/huffman.c in debug mode
INFO: [HLS 200-10] Running '/home/tools/Xilinx/Vivado/2017.4/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'giorgio' on host 'legolas.cs.columbia.edu' (Linux_x86_64 version 3.10.0-514.el7.x86_64) on Tue Jun 05 14:41:39 EDT 2018
INFO: [HLS 200-10] On os "CentOS Linux release 7.3.1611 (Core) "
INFO: [HLS 200-10] In directory '/home/giorgio/workspace/jpeg-rs-clean/syn/main/OPT/csim/build'
INFO: [APCC 202-3] Tmp directory is /tmp/apcc_db_giorgio/143541528224099402768
INFO: [APCC 202-1] APCC is done.
   Compiling(apcc) ../../../../../tb/init.c in debug mode
INFO: [HLS 200-10] Running '/home/tools/Xilinx/Vivado/2017.4/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'giorgio' on host 'legolas.cs.columbia.edu' (Linux_x86_64 version 3.10.0-514.el7.x86_64) on Tue Jun 05 14:41:42 EDT 2018
INFO: [HLS 200-10] On os "CentOS Linux release 7.3.1611 (Core) "
INFO: [HLS 200-10] In directory '/home/giorgio/workspace/jpeg-rs-clean/syn/main/OPT/csim/build'
INFO: [APCC 202-3] Tmp directory is /tmp/apcc_db_giorgio/144401528224103002552
INFO: [APCC 202-1] APCC is done.
   Compiling(apcc) ../../../../../tb/jfif_read.c in debug mode
INFO: [HLS 200-10] Running '/home/tools/Xilinx/Vivado/2017.4/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'giorgio' on host 'legolas.cs.columbia.edu' (Linux_x86_64 version 3.10.0-514.el7.x86_64) on Tue Jun 05 14:41:46 EDT 2018
INFO: [HLS 200-10] On os "CentOS Linux release 7.3.1611 (Core) "
INFO: [HLS 200-10] In directory '/home/giorgio/workspace/jpeg-rs-clean/syn/main/OPT/csim/build'
INFO: [APCC 202-3] Tmp directory is /tmp/apcc_db_giorgio/145241528224106643727
INFO: [APCC 202-1] APCC is done.
   Compiling(apcc) ../../../../../tb/jpeg2bmp.c in debug mode
INFO: [HLS 200-10] Running '/home/tools/Xilinx/Vivado/2017.4/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'giorgio' on host 'legolas.cs.columbia.edu' (Linux_x86_64 version 3.10.0-514.el7.x86_64) on Tue Jun 05 14:41:50 EDT 2018
INFO: [HLS 200-10] On os "CentOS Linux release 7.3.1611 (Core) "
INFO: [HLS 200-10] In directory '/home/giorgio/workspace/jpeg-rs-clean/syn/main/OPT/csim/build'
INFO: [APCC 202-3] Tmp directory is /tmp/apcc_db_giorgio/146081528224110251106
INFO: [APCC 202-1] APCC is done.
   Compiling(apcc) ../../../../../tb/main.c in debug mode
INFO: [HLS 200-10] Running '/home/tools/Xilinx/Vivado/2017.4/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'giorgio' on host 'legolas.cs.columbia.edu' (Linux_x86_64 version 3.10.0-514.el7.x86_64) on Tue Jun 05 14:41:53 EDT 2018
INFO: [HLS 200-10] On os "CentOS Linux release 7.3.1611 (Core) "
INFO: [HLS 200-10] In directory '/home/giorgio/workspace/jpeg-rs-clean/syn/main/OPT/csim/build'
INFO: [APCC 202-3] Tmp directory is /tmp/apcc_db_giorgio/146911528224113759834
INFO: [APCC 202-1] APCC is done.
   Compiling(apcc) ../../../../../tb/marker.c in debug mode
INFO: [HLS 200-10] Running '/home/tools/Xilinx/Vivado/2017.4/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'giorgio' on host 'legolas.cs.columbia.edu' (Linux_x86_64 version 3.10.0-514.el7.x86_64) on Tue Jun 05 14:41:57 EDT 2018
INFO: [HLS 200-10] On os "CentOS Linux release 7.3.1611 (Core) "
INFO: [HLS 200-10] In directory '/home/giorgio/workspace/jpeg-rs-clean/syn/main/OPT/csim/build'
../../../../../tb/marker.c:163:18: error: cannot increment value of type 'unsigned char [100]'
  return *ReadBuf++;
          ~~~~~~~^
../../../../../tb/marker.c:172:15: error: cannot increment value of type 'unsigned char [100]'
  c = *ReadBuf++ << 8;
       ~~~~~~~^
../../../../../tb/marker.c:173:16: error: cannot increment value of type 'unsigned char [100]'
  c |= *ReadBuf++;
        ~~~~~~~^
../../../../../tb/marker.c:552:11: error: array type 'unsigned char [100]' is not assignable
  ReadBuf = buf;
  ~~~~~~~ ^
4 errors generated.
ERROR: [HLS 200-101] Message ID '1-1' value invalid for uint argument.

FORMAT
  ap_puts_err [OPTIONS] [ Message namespace] [ Message ID] [ Message string] [ Tcl message key]
      <string>
      <uint>
      <string>
      <string>

make: *** [obj/marker.o] Error 1
CRITICAL WARNING: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
